Ajout du robot sumo

--- a/cv.html
+++ b/cv.html
@@ -516,6 +516,13 @@ titre-mission {
 <expe>
 <h1>Projets personnels</h1>
 
+<titre-mission>Robot sumo</titre-mission>
+<ul>
+<li>Robot de classe "mini-sumo", 10x10cm au sol, 500g, conçu pour participation à la compétition Sumobot de l'association ESIEESPACE (ESIEE)
+<li>Base Arduino avec 2 shields dont un fait maison, 2 moteurs, un sonar, 4 capteurs de bordures, 4 capteurs de contact
+<li>2 participations à la compétition Sumobot (2016, 2017), un prix du design (2017), des démonstrations régulières aux rencontres de l'association Caliban
+</ul>
+
 <titre-mission>Serveur de mesure de températures</titre-mission>
 <ul>
 <li>Pour optimisation des réglages d’une chaudière de chauffage central et pour information
