Mise à jour pour Cairdac (2022)

--- a/cv.html
+++ b/cv.html
@@ -139,7 +139,7 @@ titre-mission {
 
 <coordonnees>
   <p>Florian Landreau<br>
-  11 rue Marcel Maillard<br>
+  35 avenue Léon Blum<br>
   92160 ANTONY<br>
   06 81 72 35 97<br>
   florian.landreau@gadz.org</p>
@@ -162,10 +162,10 @@ titre-mission {
 <h1>Compétences</h1>
 <table>
 <tr> <td class="cat">Electronique<td>CAO électronique sous Pads, DxDesigner, Altium, OrCAD, Eagle, KiCAD<br>
-  Programmation : IDE pour microcontrôleurs PIC, AVR, MSP430, Neuron Chip, SOC Chipcon, LPC
+  Programmation : IDE pour microcontrôleurs PIC, AVR, MSP430, Neuron Chip, SOC Chipcon, LPC, RSL10, ESP32, STM32
 <tr> <td class="cat">Langages<td>C bas niveau, assembleur AVR, Python, Visual Basic
 <tr> <td class="cat">Outils<td>Windows, Word, Excel, Access, Maple, Matlab<br>
-  CAO sous Solidworks et Catia v5
+  CAO sous Solidworks, Catia v5, FreeCAD, OpenSCAD
 </table>
 
 <h1>Formation</h1>
@@ -185,7 +185,29 @@ titre-mission {
 
 <div class="nobreak">
 <table class="mission">
-<tr> <td class="ent">Valeo<td class="dates">avril 2016-juillet 2016
+<tr> <td class="ent">Cairdac<td class="dates">avril 2018...
+<tr> <td class="duree" colspan="2">(4 ans...)
+</table>
+<titre-mission>Developpement d'un pacemaker leadless autoalimenté</titre-mission>
+
+<p>Activités :
+<ul>
+<li>Specification, conception des PCB flex miniatures
+<li>Specification, conception et programmation de banc de caractérisation, bancs de tests, bancs de vieillissement
+<li>Responsable vérification et validation
+<li>Référent technique
+</ul>
+
+<table>
+<tr> <td class="cat">Environnement<td>ISO 13485 - Dispositifs médicaux
+<tr> <td class="cat">Matériel<td>Alimentations de labo, oscilloscopes
+<tr> <td class="cat">Outils<td>CAO électronique sous Eagle, KiCAD, simulation sous LTSpice, versionning avec Git
+</table>
+</div>
+
+<div class="nobreak">
+<table class="mission">
+<tr> <td class="ent">Valeo (via Ausy)<td class="dates">avril 2016-juillet 2016
 <tr> <td class="duree" colspan="2">(4 mois)
 </table>
 <titre-mission>Tests d’une solution de détection de force pour écrans tactiles automobiles</titre-mission>
@@ -203,7 +225,7 @@ titre-mission {
 
 <div class="nobreak">
 <table class="mission">
-<tr> <td class="ent">Nexans<td class="dates">octobre 2015-mars 2016
+<tr> <td class="ent">Nexans (via Ausy)<td class="dates">octobre 2015-mars 2016
 <tr> <td class="duree" colspan="2">(6 mois)
 </table>
 <titre-mission>Développement d'une solution de surveillance de réseau de distribution électrique</titre-mission>
@@ -230,7 +252,7 @@ titre-mission {
 
 <div class="nobreak">
 <table class="mission">
-<tr> <td class="ent">Valeo<td class="dates">août 2015-septembre 2015
+<tr> <td class="ent">Valeo (via Ausy)<td class="dates">août 2015-septembre 2015
 <tr> <td class="duree" colspan="2">(2 mois)
 </table>
 <titre-mission>Tests d'un chargeur de batteries de traction pour véhicule hybride</titre-mission>
@@ -255,7 +277,7 @@ titre-mission {
 
 <div class="nobreak">
 <table class="mission">
-<tr> <td class="ent">Valeo<td class="dates">mars 2015-juin 2015
+<tr> <td class="ent">Valeo (via Ausy)<td class="dates">mars 2015-juin 2015
 <tr> <td class="duree" colspan="2">(4 mois)
 </table>
 <titre-mission>Développement d'un module driver de moteur de ventilation véhicule</titre-mission>
@@ -279,7 +301,7 @@ titre-mission {
 
 <div class="nobreak">
 <table class="mission">
-<tr> <td class="ent">Sagemcom<td class="dates">octobre 2014-decembre 2014
+<tr> <td class="ent">Sagemcom (via Extia)<td class="dates">octobre 2014-decembre 2014
 <tr> <td class="duree" colspan="2">(7 semaines)
 </table>
 <titre-mission>Conception et tests de compteurs électriques intelligents.</titre-mission>
@@ -303,7 +325,7 @@ titre-mission {
 
 <div class="nobreak">
 <table class="mission">
-<tr> <td class="ent">Ciele Ingénierie<td class="dates">juin 2014-septembre 2014
+<tr> <td class="ent">Ciele Ingénierie (via Extia)<td class="dates">juin 2014-septembre 2014
 <tr> <td class="duree" colspan="2">(4 mois)
 </table>
 
@@ -334,7 +356,7 @@ titre-mission {
 
 <div class="nobreak">
 <table class="mission">
-<tr> <td class="ent">Parrot<td class="dates">2013-2014
+<tr> <td class="ent">Parrot (via Extia)<td class="dates">2013-2014
 <tr> <td class="duree" colspan="2">(6 mois)
 </table>
 
@@ -365,7 +387,7 @@ titre-mission {
 
 <div class="nobreak">
 <table class="mission">
-<tr> <td class="ent">Siemens<td class="dates">2013
+<tr> <td class="ent">Siemens (via Extia)<td class="dates">2013
 <tr> <td class="duree" colspan="2">(6 mois)
 </table>
 
@@ -397,7 +419,7 @@ titre-mission {
 
 <div class="nobreak">
 <table class="mission">
-<tr> <td class="ent">Parrot<td class="dates">2012-2013
+<tr> <td class="ent">Parrot (via Extia)<td class="dates">2012-2013
 <tr> <td class="duree" colspan="2">(9 mois)
 </table>
 
@@ -481,7 +503,7 @@ titre-mission {
 
 <div class="nobreak">
 <table class="mission">
-<tr> <td class="ent">TPC (filiale d’AVX)<td class="dates">2004
+<tr> <td class="ent">TPC (filiale d’AVX) - Stage ingénieur<td class="dates">2004
 <tr> <td class="duree" colspan="2">(4 mois)
 </table>
 
@@ -516,18 +538,12 @@ titre-mission {
 <expe>
 <h1>Projets personnels</h1>
 
-<titre-mission>Robot sumo</titre-mission>
-<ul>
-<li>Robot de classe "mini-sumo", 10x10cm au sol, 500g, conçu pour participation à la compétition Sumobot de l'association ESIEESPACE (ESIEE)
-<li>Base Arduino avec 2 shields dont un fait maison, 2 moteurs, un sonar, 4 capteurs de bordures, 4 capteurs de contact
-<li>2 participations à la compétition Sumobot (2016, 2017), un prix du design (2017), des démonstrations régulières aux rencontres de l'association Caliban
-</ul>
-
 <titre-mission>Serveur de mesure de températures</titre-mission>
 <ul>
 <li>Pour optimisation des réglages d’une chaudière de chauffage central et pour information
-<li>Interfaçage de 2 sondes numériques de température sur un Raspberry Pi
+<li>Interfaçage de 2 sondes numériques de température sur un Raspberry Pi, puis ESP32
 <li>Affichage par serveur http de graphiques des relevés via différents outils et langages scriptés uniquement : shell Linux, Cron, Python, GnuPlot.
+<li>Interfaçage avec un serveur Domotics.
 </ul>
 
 <titre-mission>Thermostat free-cooling</titre-mission>
@@ -539,13 +555,23 @@ titre-mission {
 <titre-mission>(Alti-)variomètre sonore pour le vol libre</titre-mission>
 <ul>
 <li>Capteur de pression numérique, microcontrôleur et haut-parleur piezo, alimentés par une pile bouton
-<li>Mesures, calculs capteur et modèle atmosphériques en C bas niveau
+<li>Mesures, calculs capteur et modèle atmosphérique en C bas niveau
+</ul>
+
+<titre-mission>Robot sumo</titre-mission>
+<ul>
+<li>Robot sumo réalisé pour une participation à la coupe Sumobot de l'ESIEESPACE (ESIEE) en mars 2016
+<li>Equipe de 4 personnes
+<li>Format mini-sumo : 10x10cm, 500g, totalement autonome
+<li>Réalisation de l'électronique : carte Arduino, shield 2 moteurs et un PCB custom (sonar, capteurs de lignes, capteurs de contacts, IHM)
+<li>Réalisation du soft, machine d'état avec recherche, attaques et esquives, modes de tests et debug
+<li>Robot en démonstration sur tous les salons où l'association CALIBAN est invitée, toujours fonctionnel
 </ul>
 </expe>
 </div>
 
-<header>CV Florian LANDREAU - mise à jour 08/12/2017</header>
-<footer>CV Florian LANDREAU - mise à jour 08/12/2017</footer>
+<header>CV Florian LANDREAU - mise à jour 25/10/2022</header>
+<footer>CV Florian LANDREAU - mise à jour 25/10/2022</footer>
 
 </body>
 </html>
