Mise à jour pour Cairdac (2024) et export pdf.

--- a/cv.html
+++ b/cv.html
@@ -186,22 +186,28 @@ titre-mission {
 <div class="nobreak">
 <table class="mission">
 <tr> <td class="ent">Cairdac<td class="dates">avril 2018...
-<tr> <td class="duree" colspan="2">(4 ans...)
+<tr> <td class="duree" colspan="2">(6 ans...)
 </table>
 <titre-mission>Developpement d'un pacemaker leadless autoalimenté</titre-mission>
 
 <p>Activités :
 <ul>
 <li>Specification, conception des PCB flex miniatures
-<li>Specification, conception et programmation de banc de caractérisation, bancs de tests, bancs de vieillissement
-<li>Responsable vérification et validation
+<li>Banc de caractérisation, bancs de tests, bancs de vieillissement
+<ul><li>Specification des procedures et outils
+    <li>Conception/suivi de conception
+	<li>Programmation embarquée/interfaces/procédures, pilotage d'équipements de laboratoire</ul>
+<li>Vérification et validation
 <li>Référent technique
+<li>Soudure/reprises BGA et passifs jusqu'au format 0201
 </ul>
 
 <table>
 <tr> <td class="cat">Environnement<td>ISO 13485 - Dispositifs médicaux
-<tr> <td class="cat">Matériel<td>Alimentations de labo, oscilloscopes
+<tr> <td class="cat">Matériel<td>Alimentations de labo, oscilloscopes,... banc de cyclage de batteries
 <tr> <td class="cat">Outils<td>CAO électronique sous Eagle, KiCAD, simulation sous LTSpice, versionning avec Git
+<tr> <td class="cat">Langages<td>C/C++ pour RSL10, STM32, ESP32/FreeRTOS, Matlab, Python
+<tr> <td class="cat">Habilitation électrique<td>B0, H0V, BR et BE essais
 </table>
 </div>
 
@@ -542,14 +548,14 @@ titre-mission {
 <ul>
 <li>Pour optimisation des réglages d’une chaudière de chauffage central et pour information
 <li>Interfaçage de 2 sondes numériques de température sur un Raspberry Pi, puis ESP32
-<li>Affichage par serveur http de graphiques des relevés via différents outils et langages scriptés uniquement : shell Linux, Cron, Python, GnuPlot.
-<li>Interfaçage avec un serveur Domotics.
+<li>Affichage par serveur http de graphiques des relevés via différents outils et langages scriptés uniquement : shell Linux, Cron, Python, GnuPlot
+<li>Interfaçage avec un serveur Domotics
 </ul>
 
 <titre-mission>Thermostat free-cooling</titre-mission>
 <ul>
 <li>Pour le contrôle de la température de la cave d’une micro-brasserie par ventilation conditionnelle
-<li>Reprogrammation d’un module IHM Wirecom et ajout d’un circuit connectique/alimentation/protection des I/O pour 2 sondes numériques de température intérieure/extérieure.
+<li>Reprogrammation d’un module IHM Wirecom et ajout d’un circuit connectique/alimentation/protection des I/O pour 2 sondes numériques de température intérieure/extérieure
 </ul>
 
 <titre-mission>(Alti-)variomètre sonore pour le vol libre</titre-mission>
@@ -570,8 +576,8 @@ titre-mission {
 </expe>
 </div>
 
-<header>CV Florian LANDREAU - mise à jour 25/10/2022</header>
-<footer>CV Florian LANDREAU - mise à jour 25/10/2022</footer>
+<header>CV Florian LANDREAU - Mise à jour 23/08/2024</header>
+<footer>CV Florian LANDREAU - Mise à jour 23/08/2024</footer>
 
 </body>
 </html>
