--- a/cv.html
+++ b/cv.html
@@ -185,8 +185,8 @@ titre-mission {
 
 <div class="nobreak">
 <table class="mission">
-<tr> <td class="ent">Cairdac<td class="dates">avril 2018...
-<tr> <td class="duree" colspan="2">(6 ans...)
+<tr> <td class="ent">Cairdac<td class="dates">avril 2018-février 2025
+<tr> <td class="duree" colspan="2">(7 ans)
 </table>
 <titre-mission>Developpement d'un pacemaker leadless autoalimenté</titre-mission>
 
@@ -576,8 +576,8 @@ titre-mission {
 </expe>
 </div>
 
-<header>CV Florian LANDREAU - Mise à jour 23/08/2024</header>
-<footer>CV Florian LANDREAU - Mise à jour 23/08/2024</footer>
+<header>CV Florian LANDREAU - Mise à jour 05/03/2025</header>
+<footer>CV Florian LANDREAU - Mise à jour 05/03/2025</footer>
 
 </body>
 </html>
